# strand

./: .dockerignore  .gitignore  Dockerfile  README.md  fly.toml  pyproject.toml
.claude/: launch.json
app/: cli.py  core.py  engine.py  main.py
app/static/: app.js  index.html  pyodide_engine.js  pyodide_worker.js  style.css
scratch/: smoke.html
scripts/: fetch_pyodide.py
tests/: test_cli.py  test_inject.py
